Update Quickstart and pages under mandates to fix spelling, capitalisation and other formatting issues.

--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -8,8 +8,7 @@ visible_in_sidebar: true
 # API Guide
 
 <p>
-    Once you get the <code>clientID</code> and <code>secret</code> from Setu,
-    use them to generate the token.
+    Once you get the `clientID` and `secret` from Setu, use them to generate the token.
 </p>
 
 ### Generate access token
@@ -153,7 +152,7 @@ An API to generate access tokens, which are used to authorise any other API requ
             <Link href="/payments/umap/api-integration/merchants">
                 Merchants
             </Link>
-            <p>Start integrating as a merchant to start accepting payments over UPI.</p>
+            <p>Integrate as a merchant to start accepting payments over UPI.</p>
         </Card>
     </Portion>
     <Portion desktopSpan="half">
@@ -161,7 +160,7 @@ An API to generate access tokens, which are used to authorise any other API requ
             <Link href="/payments/umap/api-integration/aggregators">
                 Aggregators
             </Link>
-            <p>Start integrating as an aggregator, to on-board and manage multiple merchants.</p>
+            <p>Integrate as an aggregator, to on-board and manage multiple merchants.</p>
         </Card>
     </Portion>
 </Row>
