--- a/content/payments/umap/mandates/generic.mdx
+++ b/content/payments/umap/mandates/generic.mdx
@@ -5,27 +5,22 @@ order: 4
 visible_in_sidebar: true
 ---
 
-## Mandate Operations
-A UPI Mandate itself is not a transaction, but rather a standing instruction on which transactions are carried out. Therefore, a status of a mandate can change just like
-updating an agreement between two parties. 
+# Mandate operations
+A UPI mandate itself is not a transaction, but rather a standing instruction on the basis of which transactions are carried out. Therefore, a status of a mandate can change, just like updating an agreement between two parties. 
 
-There are four main operations that can happen on a UPI mandate after creation:
-<ul>
-    <li>Updating a mandate. Read more <Link href="/payments/umap/mandates/generic/update">here</Link></li>
-    <li>Revoking a mandate. Read more <Link href="/payments/umap/mandates/generic/revoke">here</Link></li>
-    <li>Pausing a mandate. Read more <Link href="/payments/umap/mandates/generic/pause">here</Link></li>
-    <li>Unpausing a paused mandate. Read more <Link href="/payments/umap/mandates/generic/unpause">here</Link></li>
-</ul>
+There are four main operations that can happen on a UPI mandate after creation—
+- <a href="/payments/umap/mandates/generic/update" target="_blank">Updating a mandate ↗</a>
+- <a href="/payments/umap/mandates/generic/revoke" target="_blank">Revoking a mandate ↗</a>
+- <a href="/payments/umap/mandates/generic/pause" target="_blank">Pausing a mandate ↗</a>
+- <a href="/payments/umap/mandates/generic/unpause" target="_blank">Un-pausing a paused mandate ↗</a>
 
-#### Explore our UPI Mandate Products
+#### Explore our UPI Mandate products
 
-<Card padding="small" shape="rounded">
-    <Link href="/payments/umap/mandates">
-        <Element as="div">
+<Link href="/payments/umap/mandates">
+    <Card padding="small" shape="rounded">
             <Text size="large" weight="600" textColor="blue-90">
-                UPI Mandates Overview ↗
+                UPI Mandates overview ↗
             </Text>
             <Text weight="400">Explore other UMAP UPI Mandates products here.</Text>
-        </Element>
-    </Link>
-</Card>
+    </Card>
+</Link>
