--- a/content/payments/umap/mandates/generic/update.mdx
+++ b/content/payments/umap/mandates/generic/update.mdx
@@ -8,12 +8,10 @@ visible_in_sidebar: true
 ## Updating a mandate
 
 <Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
+    <Text weight="600">
+        Prerequisites:&nbsp;
+        <a href="/payments/umap/mandates/generic" target="_blank">UPI Mandates generic operations ↗</a>
     </Text>
-    <a href="/payments/umap/mandates/generic">
-        UPI Mandates Generic Operations ↗
-    </a>
 </Card>
 
 <hr class="primary" />
