--- a/content/payments/umap/quickstart/aggregators.mdx
+++ b/content/payments/umap/quickstart/aggregators.mdx
@@ -1,36 +1,36 @@
 ---
 sidebar_title: Aggregators
-page_title: UMAP - Quickstart Aggregators
+page_title: UMAP - Quickstart for aggregators
 order: 1
 visible_in_sidebar: true
 ---
 
-## UMAP Quickstart for Aggregators
+# Quickstart for aggregators
 
-This guide will help you get started with UMAP integration as an Aggregator
+This guide will help you get started with UMAP integration as an **aggregator**.
 
 <Callout type="tip">
-    This quickstart is for an Aggregator, if you are a Merchant, please refer to{" "}
+    This quickstart is for an aggregator, if you are a merchant, please refer to the{" "}
     <Link href="/payments/umap/quickstart" target="_blank">
-        Quickstart
+        Merchant quickstart
     </Link>
 </Callout>
 
 <br />
 
-### What is an Aggregator
+## Who is an aggregator?
 
-An aggregator on UMAP is a large merchant platform that onboards multiple merchants under them. It can be an online platform or large businesses that operate franchisees. An aggregator on UMAP has the ability to configure and control the payments processes for their merchants like enabling different payment methods, settlement accounts and notifications.
+An aggregator on UMAP is a large merchant platform that on-boards multiple merchants under them. It can be an online platform or large businesses that operate franchisees. An aggregator on UMAP has the ability to configure and control how their merchants process payments, like by enabling different payment methods, settlement accounts and notifications.
 
-You're not an Aggregator? Please refer to the [Quickstart](/payments/umap/quickstart) for other types of integration possible
+Are you not an Aggregator? Please refer to the [Merchant quickstart](/payments/umap/quickstart) instead.
 
 <hr class="primary" />
 
-### Get started
+## Get started
 
 #### Step 1 — Start KYC and business documentation
 
-This is started once Setu’s sales team has interacted with you and finalized the solution that will best meet your needs. After that, we will need business KYC details and finalize commerical agreements. After business formalities are over, an aggregator account is created for you in the system based on the documents submitted and you can begin creating merchants!
+This is started once Setu’s sales team has interacted with you and determined the solution that will best meet your needs. After that, we will need business KYC details and finalise commerical agreements. After business formalities are over, an aggregator account is created for you based on the documents submitted and you can start creating merchants!
 
 <Callout type="tip">
     For custom configurations for your business, reach out to{" "}
