--- a/content/payments/umap/quickstart/merchants.mdx
+++ b/content/payments/umap/quickstart/merchants.mdx
@@ -1,34 +1,34 @@
 ---
 sidebar_title: Merchants
-page_title: UMAP - Quickstart Merchants
+page_title: UMAP - Quickstart for merchants
 order: 2
 visible_in_sidebar: true
 ---
 
-## UMAP Quickstart for Merchants
+# Quickstart for merchants
 
-This guide will help you get started with UMAP integration as a Merchant
+This guide will help you get started with UMAP integration as a **merchant**.
 
 <Callout type="tip">
-    This quickstart is for a merchant, if you are an aggregator, please refer to{" "}
+    This quickstart is for a merchant, if you are an aggregator, please refer to the{" "}
     <Link href="/payments/umap/quickstart" target="_blank">
-        Quickstart
+        Aggregator quickstart
     </Link>
 </Callout>
 
 <br />
 
-### What is an Merchant
+## Who is a merchant?
 
 A merchant on UMAP is any business that wants to collect UPI payments from their customers to provide goods & services or use UPI Mandates for setting up recurring payments like subscriptions with their customers.
 
 <hr class="primary" />
 
-### Get started
+## Get started
 
 ##### Step 1 - Register on Bridge
 
-Merchants can integrate with UMAP by directly registering themselves on Setu's bridge which will serve as the command center for all UPI products used by them. Merchants can configure payment methods,vpas, settlements, notifications & more directly from bridge.
+As a merchant, you can integrate with UMAP by directly registering on Setu's Bridge, which is the dashboard for all UPI products used by you. You can configure your payment methods, VPAs, settlements details, notifications and more directly from Bridge.
 
 <hr class="primary" />
 
