Refine formatting for sidebar items up to “Merchant on-boarding”

--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -1,17 +1,17 @@
 ---
-sidebar_title: API Integration
-page_title: UMAP - API Integration
+sidebar_title: API integration
+page_title: UMAP - API integration
 order: 2
 visible_in_sidebar: true
 ---
 
-# API Guide
+## API guide
 
-<p>
-    Once you get the `clientID` and `secret` from Setu, use them to generate the token.
-</p>
+Once you get the `clientID` and `secret` from Setu, use them to generate tokens to authorise all API requests.
 
-### Generate access token
+<hr class="primary" />
+
+#### Generate access token
 
 An API to generate access tokens, which are used to authorise any other API requests made to Setu.
 
@@ -73,14 +73,14 @@ An API to generate access tokens, which are used to authorise any other API requ
 
 <br/>
 
-##### How to use the access token
+###### How to use the access token
 
 -   Once you have a valid token, you can use it to authorise an API calls made to Setu, by setting the `authorization` request header as `Bearer <token-value>`.
 -   Store the `refresh_token` and use it to get the new access token before it expires.
 
 <hr class="primary" />
 
-### Refresh access token
+#### Refresh access token
 
 <p>
     <strong>Before expiry</strong>, use the stored <code>refresh_token</code>{" "}
@@ -144,7 +144,7 @@ An API to generate access tokens, which are used to authorise any other API requ
 
 <hr class="primary" />
 
-### Proceed with integration
+#### Proceed with integration
 
 <Row>
     <Portion desktopSpan="half">
