--- a/content/payments/umap/api-integration/aggregators.mdx
+++ b/content/payments/umap/api-integration/aggregators.mdx
@@ -1,22 +1,23 @@
 ---
 sidebar_title: Aggregators
-page_title: UMAP - API integration for merchants
+page_title: UMAP - API integration for aggregators
 order: 1
 visible_in_sidebar: true
 ---
 
-## Aggregator API Integration
+## API integration for aggregators
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text weight="600">
-        Prerequisites:&nbsp;
-        <a href="/payments/umap/quickstart/aggregators" target="_blank">Aggregator quickstart ↗</a>
-    </Text>
-</Card>
-
-Once you have been on-boarded on to Bridge as an aggregator and business formalities have been completed, you can proceed to integrate UMAP APIs with your internal systems. First, you have to create a merchant and then enable products the merchant can use.
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/quickstart/aggregators" target="_blank">🌟 Aggregator quickstart ↗</a>
 
 <hr class="primary" />
+
+Once you have been on-boarded on to Bridge as an aggregator and business formalities have been completed, you can proceed to integrate UMAP APIs with your internal systems. First, you have to create a merchant and then enable products that the merchant can use.
+
+<hr class="primary" />
+
 
 #### Step 1 — Configure a merchant
 
@@ -33,12 +34,12 @@ As an aggregator on UMAP, you have to first create a merchant by providing their
 
 #### Step 2 — Enable UPI products for merchant
 
-Once a merchant has been associated to your aggregator account, you can now enable UPI payments and subscription products for them using our Payments & Mandates APIs.
+Once a merchant has been associated to your aggregator account, you can enable payment/subscription products under UPI payments and UPI mandates, with our APIs.
 
 <Row>
     <Portion desktopSpan="half" marginBottom="nano">
         <Card padding="small" shape="rounded">
-            <Link href="payments/umap/payments">Payments</Link>
+            <Link href="payments/umap/payments">UPI Payments</Link>
             <Text
                 weight="400"
                 marginTop="nano"
@@ -51,7 +52,7 @@ Once a merchant has been associated to your aggregator account, you can now enab
     </Portion>
      <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <Link href="payments/umap/mandates">Mandates</Link>
+            <Link href="payments/umap/mandates">UPI Mandates</Link>
             <Text
                 weight="400"
                 marginTop="nano"
@@ -68,7 +69,7 @@ Once a merchant has been associated to your aggregator account, you can now enab
 
 #### Step 3 — Manage your merchants
 
-Once you have on-boarded multiple merchants, and enabled products for them, you can also manage your merchants by editing/disabling them directly on Bridge or through our merchant management APIs.
+Once you have on-boarded multiple merchants, and enabled products for them, you can also manage your merchants by editing/disabling them directly on Bridge, or through our merchant management APIs.
 
 <NextPage
     info={{
