--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -7,32 +7,67 @@ visible_in_sidebar: true
 
 ## Merchant API Integration
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text weight="600">
-        Prerequisites:&nbsp;
-        <a href="/payments/umap/quickstart/merchants" target="_blank">Merchant quickstart ↗</a>
-    </Text>
-</Card>
-
-Once you have on-boarded on to UMAP as a merchant, and have your API credentials, the next step is to choose the right product for your use case.
-
-### What can you do with UMAP?
-
-##### Payments
-
--   Offer QR code and payment links for customers in-store or via apps and messaging.
--   Enhance guest checkout with direct UPI collect payments on preferred UPI apps.
--   For BFSI merchants, comply with regulations through Third Party Validation (TPV).
-
-##### Mandates
-
--   Use one-time mandates to clear limited stock exclusively for designated customers.
--   Instantly create service subscriptions with UPI Mandates for recurring payments.
--   Replicate wallet functionality with single block multi-debit mandates from savings accounts.
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/quickstart/merchants" target="_blank">🌟 Merchant quickstart ↗</a>
 
 <hr class="primary" />
 
-### Select the right product for your use-case
+Once you have on-boarded onto UMAP as a merchant, and have your API credentials, the next step is to choose the right product for your use case.
+
+#### What can you do with UMAP?
+
+<table>
+    <tr>
+        <th><Text as="h4" align="center">UPI Payments</Text></th>
+        <th><Text as="h4" align="center">UPI Mandates</Text></th>
+    </tr>
+    <tr>
+        <td>
+            <ol>
+                <Text>
+                    <li>
+                        Offer QR code and payment links for customers in-store or via apps and messaging.
+                    </li>
+                </Text>
+                <Text>
+                    <li>
+                        Enhance guest checkout with direct UPI collect payments on preferred UPI apps.
+                </li>
+                </Text>
+                <Text>
+                    <li>
+                        For BFSI merchants, comply with regulations through Third Party Validation (TPV).
+                    </li>
+                </Text>
+            </ol>
+        </td>
+        <td>
+            <ol>
+                <Text>
+                    <li>
+                        Use one-time mandates to clear limited stock exclusively for designated customers.
+                    </li>
+                </Text>
+                <Text>
+                    <li>
+                        Instantly create service subscriptions with UPI Mandates for recurring payments.
+                    </li>
+                </Text>
+                <Text>
+                    <li>
+                        Replicate wallet functionality with single block multi-debit mandates from savings accounts.
+                    </li>
+                </Text>
+            </ol>
+        </td>
+    </tr>
+</table>
+
+<hr class="primary" />
+
+#### Select the right product for your use-case
 
 <Row>
     <Portion desktopSpan="half" marginBottom="nano">
