--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -1,32 +1,40 @@
 ---
 sidebar_title: Merchant on-boarding
-page_title: UMAP - Merchant on-boarding
+page_title: UMAP - Merchant onboarding
 order: 2
 visible_in_sidebar: true
 ---
 
 ## Merchant on-boarding
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text weight="600">
-        Prerequisites:&nbsp;
-        <a href="/payments/umap/api-integration/aggregators" target="_blank">Aggregator API Integration ↗</a>
-    </Text>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/quickstart/aggregators" target="_blank">🌟 Aggregator quickstart ↗</a><br/>
+<a href="/payments/umap/api-integration/aggregators" target="_blank">🌟 Start API integration for aggregators ↗</a>
 
-An **Aggregator** can seamlessly on-board merchants onto the UMAP ecosystem, and enable them to start accepting UPI payments. This journey starts from collecting a merchant‘s business details, setting up their configuration and ends with the activation of the merchant’s ability to process transactions.
+<hr class="primary" />
 
-<br/>
+#### Steps to on-board a merchant
 
-#### Step 1 - Collect necessary information about merchant
+An **aggregator** can seamlessly on-board merchants onto the UMAP ecosystem, and enable them to start accepting UPI payments. This journey starts from collecting a merchant’s business details, setting up their configuration and as the final step activation of the merchant’s ability to process transactions.
+
+<img
+    src="https://storage.googleapis.com/strapi-assets/latest/Frame_108/Frame_108.png"
+    alt="Bridge"
+/>
+
+<hr class="tertiary" />
+
+###### Step 1 - Share information about merchant
 
 As the first step, the operations team gathers necessary details from the merchant, ensuring that the UMAP system has all the relevant information to proceed with the on-boarding process.
 
-<br/>
+<hr class="tertiary" />
 
-#### Step 2 - Create a merchant
+###### Step 2 - Create a merchant
 
-After collecting the merchant's information, a preliminary verification is conducted. Then, a record for the merchant is created in the UMAP system, which formally initiates their on-boarding journey.
+After getting the merchant's information, a preliminary verification is conducted. Then, a record for the merchant is created in the UMAP system, which formally initiates their on-boarding journey.
 
 <a
     href="/payments/umap/merchant-on-boarding/create-merchant-api"
@@ -35,64 +43,67 @@ After collecting the merchant's information, a preliminary verification is condu
     Create Merchant API ↗
 </a>
 
-<br/>
-<br/>
+<hr class="tertiary" />
 
-#### Step 3 - Set up VPA
+###### Step 3 - Set up VPA
 A VPA has to be created for the merchant, before they can start transacting on UMAP. This gives the merchant the capability to accept payments via UPI, completing the on-boarding process. This can include 2 steps—
 
-###### Checking VPA Availability (optional)
+
+**Check VPA availability (optional)**
 
 This API helps you check the availability of a desired VPA, to ensure it is unique and can be assigned to the merchant without conflicts.
-<a
-    href="/payments/umap/merchant-on-boarding/check-vpa-availability-api"
-    target="_blank"
->
-    Check VPA Availability API ↗
-</a>
+<Text size="small">
+    <a
+        href="/payments/umap/merchant-on-boarding/check-vpa-availability-api"
+        target="_blank"
+    >
+        Check VPA availability API ↗
+    </a>
+</Text>
 
-###### Assign VPA (required)
-The next API is used to assign a VPA to the merchant
-<a href="/payments/umap/merchant-on-boarding/create-vpa-api" target="_blank">
-    Create VPA API ↗
-</a>
+<br/>
 
-With this last step, merchant on-boarding is completed seamlessly! The merchant can now initiate transactions on UPI.
+**Assign VPA (required)**
 
-<img
-    src="https://storage.googleapis.com/strapi-assets/latest/Frame_108/Frame_108.png"
-    alt="Bridge"
-/>
+The next API is used to assign a VPA to the merchant. With this, merchant on-boarding is completed seamlessly! The merchant can now initiate transactions on UPI.
+<Text size="small">
+    <a href="/payments/umap/merchant-on-boarding/create-vpa-api" target="_blank">
+        Create VPA API ↗
+    </a>
+</Text>
+
+
 
 <hr class="primary" />
 
-## Merchant management
+#### Manage your merchants
 
-#### Update merchant status
+###### Update merchant status
 
 If a merchant needs to be disabled by an aggregator then they can call this API to update their status. If a merchant is disabled UMAP will decline all transactions to the VPA assigned to this particular merchant.
 
-<a
-    href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateTxnStatus"
-    target="_blank"
->
-    Update merchant status API ↗
-</a>
+<Text size="small">
+    <a
+        href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateTxnStatus"
+        target="_blank"
+    >
+        Update merchant status API ↗
+    </a>
+</Text>
 
-<br/>
-
-#### Update merchant details
+###### Update merchant details
 
 This API can be called to update the information associated with the merchant like settlement configuration or KYC information that may be required for accepting different payment instruments on UPI.
 
-<a
-    href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateConfig"
-    target="_blank"
->
-    Update merchant details API ↗
-</a>
+<Text size="small">
+    <a
+        href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateConfig"
+        target="_blank"
+    >
+        Update merchant details API ↗
+    </a>
+</Text>
 
-<br/>
 <br/>
 
 <Row>
