--- a/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
+++ b/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_title: Check VPA Availability
-page_title: UMAP - Merchant on-boarding - Check VPA Availability
+sidebar_title: Check VPA availability
+page_title: UMAP - Merchant on-boarding - Check VPA availability
 order: 2
 visible_in_sidebar: true
 ---
 
-# Check VPA availability
+## Check availability of VPA 
 VPAs act as unique identifiers for merchants in the UPI ecosystem, so it is highly recommended that you check VPA validity before assigning it to a merchant, to avoid conflicts. 
 
 Use the following API to check if it is already associated with another merchant or not.
@@ -13,7 +13,7 @@ Use the following API to check if it is already associated with another merchant
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -59,7 +59,9 @@ Use the following API to check if it is already associated with another merchant
     </tbody>
 </table>
 
-###### Sample request
+<hr class="primary" />
+
+#### Sample request
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -67,7 +69,7 @@ Use the following API to check if it is already associated with another merchant
 }`}
 </CodeBlockWithCopy>
 
-###### Sample response
+#### Sample response
 
 <CodeBlockWithCopy language="json">
     {`{
