--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -1,15 +1,15 @@
 ---
-sidebar_title: Create Merchant
-page_title: UMAP - Merchant on-boarding - Create Merchant
+sidebar_title: Create merchant
+page_title: UMAP - Merchant on-boarding - Create merchant
 order: 1
 visible_in_sidebar: true
 ---
 
-# Create merchant
+## Create merchant
 
-You can use the following API, to on-board merchants in UMAP, by providing business details and your `aggregatorID`.
+You can use the following API, to on-board merchants in UMAP, by providing required business details for merchants and your `aggregatorID`.
 
-<Callout type='tip'>For merchants acquired directly, `aggregatorID` can be accessed from Bridge</Callout>
+<Callout type='tip'>For merchants acquired directly, <code>aggregatorID</code> can be accessed from Bridge.</Callout>
 <br/>
 
 <table>
@@ -60,7 +60,9 @@ You can use the following API, to on-board merchants in UMAP, by providing busin
     </tbody>
 </table>
 
-###### Sample request
+<hr class="primary" />
+
+#### Sample request
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -94,7 +96,7 @@ You can use the following API, to on-board merchants in UMAP, by providing busin
 }`}
 </CodeBlockWithCopy>
 
-###### Sample response
+#### Sample response
 
 <CodeBlockWithCopy language="json">
     {`{
