--- a/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
@@ -1,12 +1,12 @@
 ---
-sidebar_title: Create VPA
+sidebar_title: Create and assign VPA
 page_title: UMAP - Merchant on-boarding - Create VPA API
 order: 3
 visible_in_sidebar: true
 ---
 
-# Create VPA
-This API can be used to assign a VPA to a merchant, which will serve as the merchant identifier across all participants in the UPI ecosystem.
+## Create and assign VPA
+This API can be used to assign a VPA to a merchant, which will serve as the merchant identifier for all participants in the UPI ecosystem.
 
 <table>
     <tbody>
@@ -57,7 +57,7 @@ This API can be used to assign a VPA to a merchant, which will serve as the merc
     </tbody>
 </table>
 
-###### Sample request
+#### Sample request
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -66,7 +66,7 @@ This API can be used to assign a VPA to a merchant, which will serve as the merc
 }`}
 </CodeBlockWithCopy>
 
-###### Sample response
+#### Sample response
 
 <CodeBlockWithCopy language="json">
     {`{
