--- a/content/payments/umap/overview.mdx
+++ b/content/payments/umap/overview.mdx
@@ -7,11 +7,11 @@ visible_in_sidebar: true
 
 ## Overview
 
-#### What is UPI Merchant Acquiring Platform (UMAP)?
+### What is UPI Merchant Acquiring Platform (UMAP)?
 
 UPI Merchant Acquiring Platform (UMAP) is a comprehensive UPI product suite designed by Setu to empower **_merchants_** and **_merchant aggregators_** by providing state-of-the-art UPI solutions. 
 
-UMAP connects directly with NPCI, absorbing both acquirer and beneficiary bank sides of the transaction to provide a seamless UPI-first product experience to our users.
+UMAP connects directly with NPCI, absorbing both acquirer and beneficiary bank sides of the transaction to provide a seamless UPI-first product experience to our customers.
 
 _<Text size="small">Unified Payments Interface (UPI) is a digital payment system developed by NPCI that enables customers to pay for goods and services real-time, across any UPI app with different payment methods—like savings accounts or credit cards—from the convenience of their phone.</Text>_
 
