--- a/content/payments/umap/quickstart.mdx
+++ b/content/payments/umap/quickstart.mdx
@@ -5,11 +5,11 @@ order: 1
 visible_in_sidebar: true
 ---
 
-# Quickstart
+## Quickstart
 
 This guide is for you to get started quickly with UMAP, and to select the combination of products that work best for your business. If you want to understand more about what UMAP is, do read about UMAP in the <a href="/payments/umap/overview">Overview</a> page.
 
-## What can I do with UMAP?
+#### What can I do with UMAP?
 
 UMAP caters to two specific categories of businesses—**Merchants** and **Aggregators**. Before you dive into UMAP product suite, explore which category you belong to.
 
