--- a/content/payments/umap/quickstart/aggregators.mdx
+++ b/content/payments/umap/quickstart/aggregators.mdx
@@ -5,7 +5,7 @@ order: 1
 visible_in_sidebar: true
 ---
 
-# Quickstart for aggregators
+## Quickstart for aggregators
 
 This guide will help you get started with UMAP integration as an **aggregator**.
 
@@ -18,7 +18,7 @@ This guide will help you get started with UMAP integration as an **aggregator**.
 
 <br />
 
-## Who is an aggregator?
+#### Who is an aggregator?
 
 An aggregator on UMAP is a large merchant platform that on-boards multiple merchants under them. It can be an online platform or large businesses that operate franchisees. An aggregator on UMAP has the ability to configure and control how their merchants process payments, like by enabling different payment methods, settlement accounts and notifications.
 
@@ -26,20 +26,20 @@ Are you not an Aggregator? Please refer to the [Merchant quickstart](/payments/u
 
 <hr class="primary" />
 
-## Get started
+#### Get started
 
-#### Step 1 — Start KYC and business documentation
+###### Step 1 — Start KYC and business documentation
 
-This is started once Setu’s sales team has interacted with you and determined the solution that will best meet your needs. After that, we will need business KYC details and finalise commerical agreements. After business formalities are over, an aggregator account is created for you based on the documents submitted and you can start creating merchants!
+As an aggregator, the first step for you is to interact with Setu’s sales team to determine the solution that will best meet your needs. Right after that, we will start collecting business KYC details and finalise commerical agreements. After business formalities are over, Setu will create an aggregator account and you can start creating merchants to offer UPI products to them.
 
 <Callout type="tip">
     For custom configurations for your business, reach out to{" "}
     <a href="">umap@setu.co</a>
 </Callout>
 
-<hr class="primary" />
+<hr class="tertiary" />
 
-#### Step 2 — Get API credentials
+###### Step 2 — Get API credentials
 
 Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-secret` details. These credentials are required to make API calls on sandbox or production.
 
