--- a/content/payments/umap/quickstart/merchants.mdx
+++ b/content/payments/umap/quickstart/merchants.mdx
@@ -5,7 +5,7 @@ order: 2
 visible_in_sidebar: true
 ---
 
-# Quickstart for merchants
+## Quickstart for merchants
 
 This guide will help you get started with UMAP integration as a **merchant**.
 
@@ -18,21 +18,21 @@ This guide will help you get started with UMAP integration as a **merchant**.
 
 <br />
 
-## Who is a merchant?
+#### Who is a merchant?
 
 A merchant on UMAP is any business that wants to collect UPI payments from their customers to provide goods & services or use UPI Mandates for setting up recurring payments like subscriptions with their customers.
 
 <hr class="primary" />
 
-## Get started
+#### Get started
 
-##### Step 1 - Register on Bridge
+###### Step 1 - Register on Bridge
 
 As a merchant, you can integrate with UMAP by directly registering on Setu's Bridge, which is the dashboard for all UPI products used by you. You can configure your payment methods, VPAs, settlements details, notifications and more directly from Bridge.
 
-<hr class="primary" />
+<hr class="tertiary" />
 
-##### Step 2 - Get API credentials
+###### Step 2 - Get API credentials
 
 Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-secret` details. These credentials are required to make API calls on sandbox or production.
 
