fix(UPI-1144): umap mandate generic operations sidebar title change; dispute notifications diagram change; customer vpa verification highlight statuses

--- a/content/payments/umap/mandates/generic.mdx
+++ b/content/payments/umap/mandates/generic.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Generic Operations
-page_title: UMAP - Mandates - Generic Operations
+sidebar_title: Mandate Operations
+page_title: UMAP - Mandates - Mandate Operations
 order: 4
 visible_in_sidebar: true
 ---
